namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-nomis-mapping-service-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-nomis-mapping-service-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "HMPPS NOMIS VSIP mapping service"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-nomis-mapping-service.git"
    cloud-platform.justice.gov.uk/slack-alert-channel: "syscon-alerts"
    cloud-platform.justice.gov.uk/slack-channel: "syscon_team"
    cloud-platform.justice.gov.uk/team-name: "syscon-devs"
